apps/ljwx-website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-website
  labels:
    app: ljwx-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ljwx-website
