apps/ljwx-website/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ljwx-website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: website.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-website
                port:
                  number: 80
